{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 302,
  "lineage": "c6b0e9b3-d18e-ea81-7a3c-2d49a297ab51",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gat",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e86420385677b8e8",
            "domain": "vpc",
            "id": "eipalloc-0e86420385677b8e8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-235-200-102.compute-1.amazonaws.com",
            "public_ip": "3.235.200.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:891377388158:instance/i-0c86a339a18e5c592",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c86a339a18e5c592",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abd40c38094a7474",
            "private_dns": "ip-10-0-4-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083188d5b961d9059",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d6c8c7c161aeff13"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09651fad0c46f1c5d",
            "tags": {
              "Name": "application_instance"
            },
            "tags_all": {
              "Name": "application_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6c8c7c161aeff13"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "public_instance_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:891377388158:instance/i-0af35c2050c4ecfa1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af35c2050c4ecfa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04094bb6807e6a267",
            "private_dns": "ip-10-0-1-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eacc1a2cb90b1eaa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0fce0725fcb457fdc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06451ac91f8d6eb25",
            "tags": {
              "Name": "web_server_1"
            },
            "tags_all": {
              "Name": "web_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fce0725fcb457fdc"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "public_instance_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:891377388158:instance/i-0cea0f85c884da266",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cea0f85c884da266",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bdbda354336d369",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071fd864f41911588",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0fce0725fcb457fdc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06451ac91f8d6eb25",
            "tags": {
              "Name": "web_Server_2"
            },
            "tags_all": {
              "Name": "web_Server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fce0725fcb457fdc"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:internet-gateway/igw-043c954859a38eaa8",
            "id": "igw-043c954859a38eaa8",
            "owner_id": "891377388158",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pubic_alb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377388158:loadbalancer/app/public-app-load-balancer/9221accc1f800a50",
            "arn_suffix": "app/public-app-load-balancer/9221accc1f800a50",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-app-load-balancer-2071020397.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377388158:loadbalancer/app/public-app-load-balancer/9221accc1f800a50",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fce0725fcb457fdc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06451ac91f8d6eb25"
              },
              {
                "subnet_id": "subnet-0c7d8d980a48813ed"
              }
            ],
            "subnets": [
              "subnet-06451ac91f8d6eb25",
              "subnet-0c7d8d980a48813ed"
            ],
            "tags": {
              "Name": "pub_Alb"
            },
            "tags_all": {
              "Name": "pub_Alb"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gat",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e86420385677b8e8",
            "association_id": "eipassoc-0bc7197352fabe89b",
            "connectivity_type": "public",
            "id": "nat-09af192e701c69af7",
            "network_interface_id": "eni-042a99e04c82a3d38",
            "private_ip": "10.0.4.152",
            "public_ip": "3.235.200.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09651fad0c46f1c5d",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "my_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nacl_new",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:network-acl/acl-00b167c34d22a337c",
            "egress": [],
            "id": "acl-00b167c34d22a337c",
            "ingress": [],
            "owner_id": "891377388158",
            "subnet_ids": [],
            "tags": {
              "Name": "nacl_vpc1"
            },
            "tags_all": {
              "Name": "nacl_vpc1"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rt1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:route-table/rtb-0e37576e1da3647da",
            "id": "rtb-0e37576e1da3647da",
            "owner_id": "891377388158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043c954859a38eaa8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "rtb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "assoc1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b296ece71268a64",
            "route_table_id": "rtb-0e37576e1da3647da",
            "subnet_id": "subnet-06451ac91f8d6eb25"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.aws_rtb",
            "module.vpc.aws_subnet.my_sub_pub",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_sg_group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:security-group/sg-0d6c8c7c161aeff13",
            "description": "This is the demo security group for the app sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d6c8c7c161aeff13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg_group",
            "name_prefix": "",
            "owner_id": "891377388158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_sg"
            },
            "tags_all": {
              "Name": "app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "web_sg_group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:security-group/sg-0fce0725fcb457fdc",
            "description": "This is the demo security group for the sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0fce0725fcb457fdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg_group",
            "name_prefix": "",
            "owner_id": "891377388158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web_sg"
            },
            "tags_all": {
              "Name": "Web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:subnet/subnet-09651fad0c46f1c5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09651fad0c46f1c5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377388158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_sub_test"
            },
            "tags_all": {
              "Name": "pri_sub_test"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:subnet/subnet-0262de769a4199841",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0262de769a4199841",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377388158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_subnet"
            },
            "tags_all": {
              "Name": "rds_subnet"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "public_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:subnet/subnet-06451ac91f8d6eb25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06451ac91f8d6eb25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377388158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_test"
            },
            "tags_all": {
              "Name": "pub_sub_test"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:subnet/subnet-0c7d8d980a48813ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d8d980a48813ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377388158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_test_2"
            },
            "tags_all": {
              "Name": "pub_sub_test_2"
            },
            "vpc_id": "vpc-0c3acac77c27f97c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377388158:vpc/vpc-0c3acac77c27f97c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065457800c7549050",
            "default_route_table_id": "rtb-07df1b8a80710c1ea",
            "default_security_group_id": "sg-07192f188d8542401",
            "dhcp_options_id": "dopt-0af522d80aa781234",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3acac77c27f97c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07df1b8a80710c1ea",
            "owner_id": "891377388158",
            "tags": {
              "Name": "vpc_anant"
            },
            "tags_all": {
              "Name": "vpc_anant"
            }
          }
        }
      ]
    }
  ]
}